Added app icon and fixed app name.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
 
     <!-- App -->
 
-    <string name="app_name">MuistiExhibitionUI</string>
+    <string name="app_name">Muisti</string>
 
     <!-- Main -->
 
