Fixed a bug that allowed not found tags to sign in. Added prettier logout warning and set it to show at 5s remaining.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,5 +26,6 @@
 
     <string name="title_activity_preview">Page preview</string>
     <string name="preview_page_button">Preview page</string>
+    <string name="logout_warning">Olet Kirjautumassa ulos %1$s</string>
 
 </resources>
